<resources>
    <string name="app_name">Code Classes</string>

    <!--    COMMON-->
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>

    <string name="back">Voltar</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_field_must_be_filled">Campo deve ser preenchido</string>
    <string name="sign_in">Entrar</string>

    <!--    CLASS 18-->
    <string name="product_name">Nome do Produto</string>
    <string name="price_product">Preço do Produto</string>
    <string name="discount_percentage">Porcetagem de Desconto</string>
    <string name="total_amount_payable">Valor Total A Pagar</string>
    <string name="product">Produto</string>
    <string name="fill_name_and_price_of_the_product">"Por favor, prencher o nome e preço do produto"</string>

    <!--    CLASS 20-->
    <string name="user_successfully_registered">Usuário cadastrado com sucesso</string>

    <!--    CLASS 21-->
    <string name="telephone">Telefone</string>

    <!--    CLASS 23-->
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>

    <!--    CLASS 24-->
    <string name="welcome_name">Seja bem vindo %1$s!</string>
    <string name="follow_to_the_next_page_and_meet_the_cars">Siga para proxima página e conheça os carros</string>
    <string name="lets_go">Vamos</string>
    <string name="car_one">Carro 1</string>
    <string name="car_two">Carro 2</string>

    <!--    CLASS 26-->
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_drawer_simple_title">Navigation Drawer Simples</string>

    <!--    CLASS 27-->
    <string name="students">Alunos</string>
    <string name="ra_number">RA: %1$s</string>

    <!--    CLASS 29-->
    <string name="musics">Musicas</string>
    <string name="bands_artist_name">Nome da Banda/Artista</string>
    <string name="year_album_release">Ano - %1$s</string>

    <!--    CLASS 38-->
    <string name="even_or_odd">Par ou Impar?</string>
    <string name="is_even">Este número é PAR</string>
    <string name="is_odd">Este número é ÍMPAR</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_address">Buscar Endereço</string>

</resources>
