<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="androidstudio.class18.kotlin.SellingProductWithDiscountAct">

    <ImageView
        android:id="@+id/ivBannerSellingProduct"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/image_class18"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etProductNameSellingProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/product_name"
        android:textSize="@dimen/font_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBannerSellingProduct" />

    <EditText
        android:id="@+id/etPriceProductSellingProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/price_product"
        android:inputType="numberDecimal"
        android:textSize="@dimen/font_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProductNameSellingProduct" />

    <EditText
        android:id="@+id/etDiscountSellingProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/discount_percentage"
        android:inputType="numberDecimal"
        android:textSize="@dimen/font_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPriceProductSellingProduct" />

    <Button
        android:id="@+id/btCalculateDiscountSellingProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:background="@color/deep_purple_A200"
        android:text="@string/total_amount_payable"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDiscountSellingProduct" />

</androidx.constraintlayout.widget.ConstraintLayout>
